--- a/package.json
+++ b/package.json
@@ -43,7 +43,12 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-video-thumbnails": "~8.0.0",
+    "expo-file-system": "~17.0.1",
+    "@shopify/flash-list": "1.6.4",
+    "expo-image": "~1.12.13",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
